--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
 	},
 	"homepage": "https://github.com/jelsonjay/webpack-app#readme",
 	"devDependencies": {
+		"css-loader": "^6.5.1",
+		"mini-css-extract-plugin": "^2.4.5",
+		"style-loader": "^3.3.1",
 		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1"
 	}
