--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack",
+		"dev": "webpack server --hot"
 	},
 	"repository": {
 		"type": "git",
@@ -19,9 +21,11 @@
 	"homepage": "https://github.com/jelsonjay/webpack-app#readme",
 	"devDependencies": {
 		"css-loader": "^6.5.1",
+		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^2.4.5",
 		"style-loader": "^3.3.1",
 		"webpack": "^5.65.0",
-		"webpack-cli": "^4.9.1"
+		"webpack-cli": "^4.9.1",
+		"webpack-dev-server": "^4.7.1"
 	}
 }
